examples/bad/ZeroDivision.ml
(**   Test: Testing division by 0                                  **)
(**   Describe: should throw                                       **)
(**   Throws:  .*Division by 0.*                                   **)

(* Divide by 0 *)
let h = (1-1) in
let g = 4 / h in g